fixed unwanted white space at right

--- a/app/src/portfolio/Portfolio.css
+++ b/app/src/portfolio/Portfolio.css
@@ -111,7 +111,7 @@
     top: 65vh;
     left:50%;
     transform: translateX(-50%);
-    width: 90%;
+    width: 100%;
 }
 
 .icons{
